--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <h1>LiDARConvert - iOS Point Cloud and 3D Mesh Data Converter</h1>
                         <p class="small">Easily convert your 3D Mesh data and Point Clouds directly on your iOS device. Convert point cloud formats: LAZ, LAS, PLY (E57 and PCD coming soon). Convert mesh formats: PLY, OBJ, USDZ, FBX, STL. Your files stay on your device – works completely offline for privacy and convenience.</p>
                         <div class="buttons">
-                         <a target="blank" href="https://apps.apple.com/nl/app/TODO">
+                         <a target="blank" href="https://apps.apple.com/nl/app/lidarconvert-3d-data-converter/id6739818360">
                              <img class="app-store" src="./media/app-store-light.svg" alt="app store button">
                          </a>
                          <button onclick="window.location.href='release-notes.html'" type="button" class="learn-more">Learn More</button>
